--- a/app/src/main/res/layout/cau_tao_cua_recycler_view.xml
+++ b/app/src/main/res/layout/cau_tao_cua_recycler_view.xml
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_add_alert_white_18dp"
+            android:contentDescription="@string/app_name"
             android:id="@+id/bell_icon"/>
 
     </LinearLayout>
