--- a/app/src/main/res/layout/custom_recycler_view.xml
+++ b/app/src/main/res/layout/custom_recycler_view.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:textSize="25dp"
         android:textStyle="bold"
         android:id="@+id/title" />
 
@@ -20,6 +21,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:textSize="25dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -35,6 +37,7 @@
     </LinearLayout>
 
     <TextView
+        android:textSize="25dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
