--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,6 @@
 
     <item android:id="@+id/search"
         android:title="@string/search"
-        android:icon="@drawable/search_icon"
+        android:icon="@android:drawable/ic_search_category_default"
         app:showAsAction="ifRoom"/>
 </menu>
