--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:statusBarColor">@color/colorPrimaryDark</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:colorPrimary">@color/colorPrimaryDark</item>
-        <item name="android:textColorPrimary">@color/colorTitle</item>
+        <item name="android:textColorPrimary">@color/colorAccent</item>
     </style>
 </resources>
 
