--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#D50000</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorTitle">#FFFFFF</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="bell_off">#FFFFFF</color>
     <color name="bell_on">#FFFFFF40</color>
+    <color name="gray_border">#9E9E9E</color>
 </resources>
