Previous Bug Fixed But App Is Not Operated Properly

--- a/app/src/main/res/layout/recycler_view_date_indicator.xml
+++ b/app/src/main/res/layout/recycler_view_date_indicator.xml
@@ -9,6 +9,7 @@
         android:textColor="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/today"
         android:id="@+id/date_indicator"/>
 
     <View
