--- a/app/src/main/res/layout/clause_card.xml
+++ b/app/src/main/res/layout/clause_card.xml
@@ -2,16 +2,23 @@
 
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/clause_card"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_margin="8dp" >
+    android:layout_margin="8dp"
+    card_view:cardCornerRadius="6dp">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/clause_card_header_image"
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:layout_weight="3"/>
+            android:layout_weight="5"/>
 
         <TextView
             android:id="@+id/clause_card_title"
@@ -19,13 +26,20 @@
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:layout_weight="1"/>
+            android:layout_weight="3"/>
 
         <TextView
             android:id="@+id/clause_card_content"
+            android:textSize="20sp"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="3"
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:layout_weight="5"/>
+            android:layout_weight="7"/>
+
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
 
