--- a/app/src/main/res/layout/entry_content.xml
+++ b/app/src/main/res/layout/entry_content.xml
@@ -5,13 +5,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:textSize="25sp"
+        android:textSize="19sp"
         android:textStyle="bold"
         android:layout_marginBottom="5dp"
         android:id="@+id/date" />
@@ -21,12 +20,12 @@
         android:layout_height="30dp"
         android:layout_below="@id/date"
         android:layout_marginBottom="5dp"
-        android:textSize="25sp"
+        android:textSize="19sp"
         android:textStyle="bold"
         android:id="@+id/title" />
 
     <TextView
-        android:textSize="25sp"
+        android:textSize="19sp"
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_below="@id/title"
@@ -45,7 +44,7 @@
         android:id="@+id/bell_icon"/>
 
     <TextView
-        android:textSize="25sp"
+        android:textSize="19sp"
         android:layout_below="@id/so_ngay_luyen_tap"
         android:layout_width="match_parent"
         android:layout_height="30dp"
