--- a/app/src/main/res/layout/fragment_question_tab.xml
+++ b/app/src/main/res/layout/fragment_question_tab.xml
@@ -24,11 +24,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <FrameLayout
-        android:id="@+id/replaced_by_quiz_result_fragment"
+    <TextView
+        android:id="@+id/display_exam_result"
         android:layout_below="@+id/start_exam"
         android:layout_marginTop="5dp"
         android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
