--- a/app/src/main/res/layout/layout_jlpt_exam.xml
+++ b/app/src/main/res/layout/layout_jlpt_exam.xml
@@ -17,7 +17,7 @@
         android:paddingBottom="40dp"
         android:maxLength="140"
         android:layout_width="match_parent"
-        android:layout_height="270dp" />
+        android:layout_height="350dp" />
 
     <TableLayout
         android:id="@+id/four_options"
@@ -29,25 +29,27 @@
             <Button
                 android:id="@+id/option1"
                 android:layout_gravity="center"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/option2"
                 android:layout_gravity="center"
-                android:layout_weight="1"/>
-         </TableRow>
+                android:layout_weight="1" />
+        </TableRow>
 
         <TableRow>
             <Button
                 android:id="@+id/option3"
                 android:layout_gravity="center"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
-             <Button
-               android:id="@+id/option4"
-               android:layout_gravity="center"
-               android:layout_weight="1"/>
+            <Button
+                android:id="@+id/option4"
+                android:layout_gravity="center"
+                android:layout_weight="1" />
         </TableRow>
+
+
 
     </TableLayout>
 
@@ -65,6 +67,7 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:layout_width="0px"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_arrow_back_black_24dp" />
 
             <TextView
@@ -80,6 +83,7 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:layout_width="0px"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_arrow_forward_black_24dp"/>
 
     </LinearLayout>
