--- a/app/src/main/res/layout/fragment_for_long_option.xml
+++ b/app/src/main/res/layout/fragment_for_long_option.xml
@@ -8,11 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="1"
-        android:text="@string/reading_title"
         android:gravity="center"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:id="@+id/reading_title"/>
+        android:id="@+id/long_option_title"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,7 +20,7 @@
         android:fillViewport="true">
 
         <TextView
-            android:id="@+id/reading_question"
+            android:id="@+id/question_in_long_fragment"
             android:textSize="25sp"
             android:textStyle="bold"
             android:layout_width="match_parent"
@@ -30,32 +29,32 @@
     </ScrollView>
 
     <LinearLayout
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:layout_height="0px"
         android:orientation="vertical"
         android:layout_width="match_parent">
 
         <Button
-            android:id="@+id/option1_in_reading_question"
+            android:id="@+id/option1_in_long_fragment"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:layout_width="match_parent" />
 
         <Button
-            android:id="@+id/option2_in_reading_question"
+            android:id="@+id/option2_in_long_fragment"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_gravity="center" />
 
 
         <Button
-            android:id="@+id/option3_in_reading_question"
+            android:id="@+id/option3_in_long_fragment"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_gravity="center"/>
 
         <Button
-            android:id="@+id/option4_in_reading_question"
+            android:id="@+id/option4_in_long_fragment"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_gravity="center" />
