--- a/app/src/main/res/layout/fragment_for_short_option.xml
+++ b/app/src/main/res/layout/fragment_for_short_option.xml
@@ -5,25 +5,35 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/vocab_grammar_title"
+        android:id="@+id/short_option_title"
         android:layout_height="0px"
         android:layout_width="match_parent"
         android:gravity="center"
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_weight="1"/>
-    <TextView
-        android:id="@+id/vocab_grammar_question"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:paddingTop="40dp"
-        android:paddingBottom="40dp"
-        android:maxLength="140"
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="5"/>
+        android:layout_weight="5"
+        android:fillViewport="true">
+
+        <TextView
+            android:id="@+id/question_in_short_fragment"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:paddingTop="40dp"
+            android:paddingBottom="40dp"
+            android:maxLength="140"
+            android:layout_width="match_parent"
+            android:layout_height="0px" />
+
+
+    </ScrollView>
+
 
     <TableLayout
         android:layout_width="match_parent"
@@ -32,13 +42,13 @@
 
         <TableRow android:layout_weight="1">
             <Button
-                android:id="@+id/option1_in_vocab_grammar_question"
+                android:id="@+id/option1_in_short_fragment"
                 android:layout_gravity="center"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/option2_in_vocab_grammar_question"
+                android:id="@+id/option2_in_short_fragment"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1" />
@@ -46,13 +56,13 @@
 
         <TableRow android:layout_weight="1">
             <Button
-                android:id="@+id/option3_in_vocab_grammar_question"
+                android:id="@+id/option3_in_short_fragment"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/option4_in_vocab_grammar_question"
+                android:id="@+id/option4_in_short_fragment"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1" />
