--- a/app/src/main/res/layout/date_indicator_content.xml
+++ b/app/src/main/res/layout/date_indicator_content.xml
@@ -6,6 +6,7 @@
 
     <TextView
         android:textSize="25dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
         android:textColor="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
