--- a/app/src/main/res/layout/layout_exam_result.xml
+++ b/app/src/main/res/layout/layout_exam_result.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,11 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:title="@string/app_name"
-
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/layout_tao_moi_content" />
+
+    <include layout="@layout/layout_exam_result_content"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
