--- a/app/src/main/res/layout/layout_jlpt_exam_content.xml
+++ b/app/src/main/res/layout/layout_jlpt_exam_content.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -7,12 +9,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <FrameLayout
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:id="@+id/question_container"
         android:layout_width="match_parent"
-        android:layout_height="450dp"/>
+        android:layout_height="480dp"/>
 
     <LinearLayout
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:id="@+id/navigation"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
@@ -29,13 +37,31 @@
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_arrow_back_black_24dp" />
 
-        <TextView
-            android:id="@+id/question_counting"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:textSize="45sp"
+        <LinearLayout
+            android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_width="0px"/>
+            android:orientation="vertical"
+            android:layout_weight="2">
+
+            <TextView
+                android:id="@+id/question_counting"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="45sp"
+                android:layout_height="0px"
+                android:layout_width="match_parent"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:textSize="45sp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:id="@+id/time_remaining"/>
+
+
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/forward_arrow"
