Working on report and sharing

--- a/app/src/main/res/layout/correct_answer_entry.xml
+++ b/app/src/main/res/layout/correct_answer_entry.xml
@@ -10,14 +10,17 @@ android:layout_height="match_parent">
 <TextView
     android:id="@+id/question_number_correct_entry"
     android:textSize="25sp"
+    android:textStyle="bold"
     android:layout_alignParentTop="true"
     android:layout_width="50dp"
-    android:layout_height="30dp" />
+    android:gravity="center"
+    android:layout_height="60dp" />
 
 <TextView
     android:id="@+id/brief_question_correct_entry"
     android:textSize="25sp"
     android:textStyle="bold"
+    android:maxLength="50"
     android:layout_toRightOf="@+id/question_number_correct_entry"
     android:layout_toEndOf="@+id/question_number_correct_entry"
     android:layout_alignTop="@+id/question_number_correct_entry"
@@ -39,12 +42,13 @@ android:layout_height="match_parent">
     android:layout_height="wrap_content" />
 
 <TextView
-    android:id="@+id/user_answer"
+    android:id="@+id/user_answer_correct_entry"
+    android:maxLength="50"
     android:textSize="25sp"
     android:layout_below="@+id/brief_question_correct_entry"
     android:layout_alignLeft="@+id/question_number_correct_entry"
-    android:layout_alignEnd="@+id/question_number_correct_entry"
-    android:layout_alignStart="@+id/brief_question_correct_entry"
+    android:layout_alignEnd="@+id/brief_question_correct_entry"
+    android:layout_alignStart="@+id/question_number_correct_entry"
     android:layout_alignRight="@+id/brief_question_correct_entry"
     android:layout_width="wrap_content"
     android:layout_height="20dp" />
@@ -53,10 +57,11 @@ android:layout_height="match_parent">
     android:id="@+id/correct_answer_correct_entry"
     android:layout_width="wrap_content"
     android:layout_height="20dp"
-    android:layout_below="@+id/user_answer"
+    android:maxLength="50"
+    android:layout_below="@+id/user_answer_correct_entry"
     android:layout_alignLeft="@+id/question_number_correct_entry"
-    android:layout_alignEnd="@+id/question_number_correct_entry"
-    android:layout_alignStart="@+id/brief_question_correct_entry"
+    android:layout_alignEnd="@+id/brief_question_correct_entry"
+    android:layout_alignStart="@+id/question_number_correct_entry"
     android:layout_alignRight="@+id/brief_question_correct_entry"/>
 
 </RelativeLayout>
