--- a/app/src/main/res/layout/layout_exam_result_content.xml
+++ b/app/src/main/res/layout/layout_exam_result_content.xml
@@ -89,10 +89,10 @@
 
         <android.support.v7.widget.RecyclerView
             android:layout_alignParentBottom="true"
-            android:layout_above="@+id/view_details"
+            android:layout_below="@+id/view_details"
             android:id="@+id/exam_in_details"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="2800dp" />
 
     </RelativeLayout>
 
