--- a/app/src/main/res/layout/fragment_clause_tab.xml
+++ b/app/src/main/res/layout/fragment_clause_tab.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:id="@+id/clause_tab_recycler_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
@@ -15,6 +19,13 @@
         android:layout_gravity="bottom|end"
         android:src="@android:drawable/ic_menu_edit"
         android:layout_margin="@dimen/fab_margin"
-        android:id="@+id/tao_clause_moi"   />
+        android:id="@+id/topic_filter"   />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+
+        android:id="@+id/infrequent_clause_filter"/>
 
 </android.support.design.widget.CoordinatorLayout>
