--- a/app/src/main/res/layout/clause_card.xml
+++ b/app/src/main/res/layout/clause_card.xml
@@ -117,6 +117,7 @@
 
         <TextView
             android:id="@+id/lastExampleOn"
+            android:textStyle="italic"
             android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="30dp" />
