--- a/app/src/main/res/layout/fragment_clause_tab.xml
+++ b/app/src/main/res/layout/fragment_clause_tab.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,9 +18,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:src="@android:drawable/ic_menu_edit"
+        android:src="@drawable/ic_autorenew_white_24dp"
         android:layout_margin="@dimen/fab_margin"
         android:id="@+id/topic_filter"   />
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/last_example_filter"
+        android:src="@drawable/ic_schedule_white_24dp"
+        app:layout_anchor="@+id/topic_filter"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="80dp"
+        app:layout_anchorGravity="top|right|end"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/original_filter"
+        android:src="@drawable/ic_undo_white_24dp"
+        app:layout_anchor="@+id/topic_filter"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="145dp"
+        app:layout_anchorGravity="top|right|end"/>
 
 </android.support.design.widget.CoordinatorLayout>
