--- a/app/src/main/res/layout/layout_detailed_clause_card_content.xml
+++ b/app/src/main/res/layout/layout_detailed_clause_card_content.xml
@@ -113,6 +113,7 @@
             <TextView
                 android:id="@+id/lastExampleOn_section"
                 android:textSize="25sp"
+                android:textStyle="italic"
                 android:layout_width="match_parent"
                 android:layout_height="30dp" />
 
