Back From Holidays & TOPIC FILTER

--- a/app/src/main/res/layout/layout_detailed_clause_card.xml
+++ b/app/src/main/res/layout/layout_detailed_clause_card.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
-    android:id="@+id/exam_result"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="app.learning.fantaster.nhatkyhoctiengnhat.MainActivity" >
+    tools:context=".activity.MainActivity" >
 
     <android.support.design.widget.AppBarLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
