--- a/app/src/main/res/layout/layout_tao_moi.xml
+++ b/app/src/main/res/layout/layout_tao_moi.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="app.learning.fantaster.nhatkyhoctiengnhat.MainActivity" >
+    tools:context=".activity.MainActivity" >
 
     <android.support.design.widget.AppBarLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
