--- a/app/src/main/res/layout/clause_card.xml
+++ b/app/src/main/res/layout/clause_card.xml
@@ -99,6 +99,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:id="@+id/topic"
+            android:layout_gravity="center"
             android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="30dp" />
@@ -121,27 +122,6 @@
             android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="30dp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@color/gray_border" />
-
-        <TextView
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:text="@string/foo_example"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:scrollHorizontally="true"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:id="@+id/example"
-            android:textSize="25sp"
-            android:layout_width="match_parent"
-            android:layout_height="70dp" />
 
     </LinearLayout>
 
