--- a/app/src/main/res/layout/clause_card.xml
+++ b/app/src/main/res/layout/clause_card.xml
@@ -24,22 +24,6 @@
             android:layout_width="match_parent"
             android:layout_height="60dp" />
 
-        <TextView
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:layout_width="match_parent"
-            android:text="@string/foo_formula"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:scrollHorizontally="true"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:id="@+id/formula"
-            android:textSize="25sp"
-            android:layout_width="match_parent"
-            android:layout_height="30dp" />
-
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
@@ -55,29 +39,9 @@
         <TextView
             android:scrollHorizontally="true"
             android:ellipsize="end"
-            android:maxLines="1"
+            android:maxLines="3"
             android:id="@+id/brief_summary"
-            android:textSize="25sp"
-            android:layout_width="match_parent"
-            android:layout_height="30dp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@color/gray_border" />
-
-        <TextView
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:layout_width="match_parent"
-            android:text="@string/foo_explanation"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:scrollHorizontally="true"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:id="@+id/explanation"
+            android:textStyle="italic"
             android:textSize="25sp"
             android:layout_width="match_parent"
             android:layout_height="30dp" />
@@ -94,20 +58,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:scrollHorizontally="true"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:id="@+id/topic"
-            android:layout_gravity="center"
-            android:textSize="25sp"
-            android:layout_width="match_parent"
-            android:layout_height="30dp" />
-
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@color/gray_border" />
+
+        <TextView
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:id="@+id/topic"
+            android:textStyle="italic"
+            android:layout_gravity="center"
+            android:textSize="25sp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp" />
 
         <TextView
             android:textStyle="bold"
@@ -115,6 +80,11 @@
             android:text="@string/foo_last_example_on"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@color/gray_border" />
 
         <TextView
             android:id="@+id/lastExampleOn"
