--- a/app/src/main/res/layout/layout_detailed_clause.xml
+++ b/app/src/main/res/layout/layout_detailed_clause.xml
@@ -9,8 +9,6 @@
     tools:context=".activity.MainActivity" >
 
     <android.support.design.widget.AppBarLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -22,8 +20,18 @@
             app:title="@string/app_name"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/detailed_tab"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/layout_detailed_clause_content"/>
+    <android.support.v4.view.ViewPager
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/detailed_tab_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.design.widget.CoordinatorLayout>
