--- a/app/src/main/res/layout/layout_modify_user_add_on.xml
+++ b/app/src/main/res/layout/layout_modify_user_add_on.xml
@@ -44,8 +44,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/section_title"
-                    android:text="@string/memory_trick"
+                    android:id="@+id/section_modify_title"
                     android:layout_alignParentTop="true"
                     android:gravity="center"
                     android:textStyle="bold"
@@ -54,21 +53,21 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/section_content"
+                    android:id="@+id/section_modify_content"
                     android:layout_marginTop="15dp"
                     android:textSize="30sp"
                     android:inputType="textMultiLine"
-                    android:layout_below="@+id/section_title"
+                    android:layout_below="@+id/section_modify_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
                 <Button
-                    android:text="@string/add_memory_trick"
+                    android:text="@string/make_change"
                     android:id="@+id/make_change"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_below="@+id/section_content"
+                    android:layout_below="@+id/section_modify_content"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
